--- a/jupyter/venta_madrid centro/Joins_distritos.ipynb
+++ b/jupyter/venta_madrid centro/Joins_distritos.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "883f9574",
+   "id": "8d244e32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "12ded0ec",
+   "id": "c3d4dc78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6d6b469c",
+   "id": "4df98222",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2afe64d9",
+   "id": "8a56d756",
    "metadata": {
     "scrolled": true
    },
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bf8f764c",
+   "id": "da49868e",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b681c8fd",
+   "id": "d2967806",
    "metadata": {
     "scrolled": true
    },
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "085d2849",
+   "id": "fffa6712",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e54639f0",
+   "id": "742a20e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ffba2a5f",
+   "id": "0713ae2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ce2d9294",
+   "id": "b991af65",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c356b1fe",
+   "id": "86236f0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "607d6888",
+   "id": "cd33f197",
    "metadata": {
     "scrolled": true
    },
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "91bce260",
+   "id": "15c36570",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "da857ae8",
+   "id": "643f5edd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "39d3cc47",
+   "id": "be280bc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ad96021f",
+   "id": "58b65e00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c141a2c6",
+   "id": "bc65dce2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d51692d6",
+   "id": "75a3218a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bcba988a",
+   "id": "1ea1dd74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e85c0b73",
+   "id": "ac860572",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1c716833",
+   "id": "e2d5cb38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8bf2db03",
+   "id": "7f7cc333",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e157486c",
+   "id": "8358b184",
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "173560bc",
+   "id": "b8d83301",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1562,38 +1562,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "23a4d026",
+   "execution_count": 25,
+   "id": "c4b5fc46",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ascensor\n",
-       "1    780\n",
-       "2    137\n",
-       "0     51\n",
-       "       1\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "chamartin['ascensor'].fillna(3, inplace=True)\n",
+    "condi = ~chamartin['ascensor'].astype(str).isin(['0', '1', '2'])\n",
     "\n",
-    "chamartin.ascensor.value_counts()\n",
+    "chamartin.loc[condi, 'ascensor'] = 3\n",
     "\n",
-    "#chamartin['ascensor'] = chamartin['ascensor'].astype(int)"
+    "chamartin['ascensor'] = chamartin['ascensor'].astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6920a3e3",
+   "execution_count": 26,
+   "id": "ece16cce",
    "metadata": {
     "scrolled": true
    },
@@ -1616,12 +1600,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7a8fb5ca",
+   "execution_count": 27,
+   "id": "7a33bf13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "chamartin['caract'].fillna(3, inplace=True)\n",
+    "condi = ~chamartin['caract'].astype(str).isin(['0', '1', '2'])\n",
+    "\n",
+    "chamartin.loc[condi, 'caract'] = 3\n",
+    "\n",
+    "chamartin['caract'] = chamartin['caract'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "cb29fb79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chamartin['detalles'] = chamartin['detalles'].str.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "6ecb015d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Cannot set a DataFrame with multiple columns to the single column planta",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_18400\\3257138838.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[0mpatron\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'|'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'({condicion})'\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mcondicion\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcondiciones\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;31m# Extrae el texto que coincide con las condiciones y mapea los valores\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m \u001b[0mchamartin\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'planta'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mchamartin\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'detalles'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextract\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpatron\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexpand\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m \u001b[0mchamartin\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'planta'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mchamartin\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'planta'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcondiciones\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   3936\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_setitem_frame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3937\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mSeries\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3938\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_setitem_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3939\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3940\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_item_frame_value\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3941\u001b[0m         elif (\n\u001b[0;32m   3942\u001b[0m             \u001b[0mis_list_like\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3943\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_unique\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   4090\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_item_mgr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0marraylike\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4091\u001b[0m             \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4092\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4093\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4094\u001b[1;33m             raise ValueError(\n\u001b[0m\u001b[0;32m   4095\u001b[0m                 \u001b[1;34m\"Cannot set a DataFrame with multiple columns to the single \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4096\u001b[0m                 \u001b[1;34mf\"column {key}\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4097\u001b[0m             )\n",
+      "\u001b[1;31mValueError\u001b[0m: Cannot set a DataFrame with multiple columns to the single column planta"
+     ]
+    }
+   ],
+   "source": [
+    "condiciones = {\n",
+    "    'chalet': -3,\n",
+    "    'sótano': -2,\n",
+    "    'entreplanta': -1,\n",
+    "    'bajo': 0,\n",
+    "    '1': 1,\n",
+    "    '2': 2,\n",
+    "    '3': 3,\n",
+    "    '4': 4,\n",
+    "    '5': 5,\n",
+    "    '6': 6,\n",
+    "    '7': 7,\n",
+    "    '8': 8,\n",
+    "    '9': 9,\n",
+    "    '10': 10,\n",
+    "    '11': 11,\n",
+    "    '12': 12,\n",
+    "    '13': 13,\n",
+    "    '14': 14,\n",
+    "    '15': 15,\n",
+    "    '16': 16,\n",
+    "    '17': 17\n",
+    "}\n",
+    "\n",
+    "patron = '|'.join(f'({condicion})' for condicion in condiciones.keys())\n",
+    "\n",
+    "# Extrae el texto que coincide con las condiciones y mapea los valores\n",
+    "chamartin['planta'] = chamartin['detalles'].str.extract(patron, expand=False)\n",
+    "chamartin['planta'] = chamartin['planta'].map(condiciones)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2477b9a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebf2eb2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d9880c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chamartin.caract.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b82a803c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "condi = ~chamartin['caract'].astype(str).isin(['0', '1', '2'])\n",
+    "\n",
+    "chamartin.loc[condi, 'caract'] = 3\n",
     "\n",
     "chamartin['caract'] = chamartin['caract'].astype(int)"
    ]
@@ -1629,7 +1717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37ddab18",
+   "id": "8627493b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7fe2079",
+   "id": "6e4e868f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,59 +1738,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "7ae4bf3f",
+   "execution_count": null,
+   "id": "e54bae6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chamartin.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b31a32cd",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['sin ascensor', 'Sótano interior sin ascensor',\n",
-       "       'Bajo exterior con ascensor', 'Bajo exterior sin ascensor',\n",
-       "       'Planta 1ª interior sin ascensor', 'Bajo interior sin ascensor',\n",
-       "       'Planta 1ª exterior con ascensor',\n",
-       "       'Semi-sótano exterior sin ascensor',\n",
-       "       'Planta 1ª exterior sin ascensor', 'Bajo interior con ascensor',\n",
-       "       'Planta 1ª interior con ascensor',\n",
-       "       'Planta 3ª interior con ascensor',\n",
-       "       'Entreplanta exterior con ascensor',\n",
-       "       'Planta 2ª interior sin ascensor',\n",
-       "       'Planta 6ª interior con ascensor',\n",
-       "       'Planta 3ª exterior con ascensor', 'exterior sin ascensor',\n",
-       "       'Semi-sótano interior con ascensor',\n",
-       "       'Planta 5ª exterior con ascensor',\n",
-       "       'Planta 4ª exterior con ascensor',\n",
-       "       'Entreplanta interior con ascensor',\n",
-       "       'Planta 3ª exterior sin ascensor',\n",
-       "       'Planta 2ª exterior con ascensor',\n",
-       "       'Planta 2ª exterior sin ascensor',\n",
-       "       'Planta 7ª interior con ascensor',\n",
-       "       'Planta 4ª interior con ascensor',\n",
-       "       'Planta 3ª interior sin ascensor',\n",
-       "       'Planta 9ª exterior con ascensor', 'exterior con ascensor',\n",
-       "       'Planta 8ª exterior con ascensor',\n",
-       "       'Entreplanta exterior sin ascensor',\n",
-       "       'Planta 14ª exterior con ascensor',\n",
-       "       'Planta 7ª exterior con ascensor', 'Planta 1ª con ascensor',\n",
-       "       'Planta 6ª exterior con ascensor',\n",
-       "       'Planta 5ª interior con ascensor',\n",
-       "       'Planta 17ª exterior con ascensor',\n",
-       "       'Planta 2ª interior con ascensor', 'Planta 3ª con ascensor',\n",
-       "       'Planta 8ª interior con ascensor',\n",
-       "       'Planta 13ª exterior con ascensor', 'chalet',\n",
-       "       'Planta 10ª exterior con ascensor', 'Planta 5ª con ascensor',\n",
-       "       'Planta 12ª exterior con ascensor', 'con ascensor', 'Planta 1ª',\n",
-       "       'Bajo sin ascensor', 'Planta 4ª con ascensor',\n",
-       "       'Planta 16ª exterior con ascensor'], dtype=object)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chamartin.detalles.unique()"
    ]
@@ -1710,11 +1761,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fee44f1",
+   "id": "502fd69b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "chamartin.detalles.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8c38ee5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "chamartin['planta'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f18cc732",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "chamartin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "236bb802",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chamartin.isna().sum()"
    ]
   }
  ],
