--- a/jupyter/venta_madrid centro/limpieza_madrid_centro - copia.ipynb
+++ b/jupyter/venta_madrid centro/limpieza_madrid_centro - copia.ipynb
@@ -20,29 +20,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arganzuela = pd.read_csv('../../data_madrid_centro/arganzuela_total.csv')\n",
-    "barajas = pd.read_csv('../../data_madrid_centro/barajas_total.csv')\n",
-    "bsalamanca_min_900k = pd.read_csv('../../data_madrid_centro/barriosalamanca_min-900k.csv')\n",
-    "bsalamanca_900k_max = pd.read_csv('../../data_madrid_centro/barriosalamanca_900k-max.csv')\n",
-    "carabanchel = pd.read_csv('../../data_madrid_centro/carabanchel_total.csv')\n",
-    "centro_min_700k = pd.read_csv('../../data_madrid_centro/centro_min-700k.csv')\n",
-    "centro_700k_max = pd.read_csv('../../data_madrid_centro/centro_700k-max.csv')\n",
-    "chamartin = pd.read_csv('../../data_madrid_centro/chamartin_total.csv')\n",
-    "chamberi = pd.read_csv('../../data_madrid_centro/chamberi_total.csv')\n",
-    "ciudadlineal = pd.read_csv('../../data_madrid_centro/ciudadlineal_total.csv')\n",
-    "fuencarral = pd.read_csv('../../data_madrid_centro/fuencarral_total.csv')\n",
-    "hortaleza = pd.read_csv('../../data_madrid_centro/hortaleza_total.csv')\n",
-    "latina = pd.read_csv('../../data_madrid_centro/latina_total.csv')\n",
-    "moncloa = pd.read_csv('../../data_madrid_centro/moncloa_total.csv')\n",
-    "moratalaz = pd.read_csv('../../data_madrid_centro/moratalaz_total.csv')\n",
-    "puentevallecas = pd.read_csv('../../data_madrid_centro/puentevallecas_total.csv')\n",
-    "retiro = pd.read_csv('../../data_madrid_centro/retiro_total.csv')\n",
-    "sanblas = pd.read_csv('../../data_madrid_centro/sanblas_total.csv')\n",
-    "tetuan = pd.read_csv('../../data_madrid_centro/tetuan_total.csv')\n",
-    "usera = pd.read_csv('../../data_madrid_centro/usera_total.csv')\n",
-    "vicalvaro = pd.read_csv('../../data_madrid_centro/vicalvaro_total.csv')\n",
-    "villavallecas = pd.read_csv('../../data_madrid_centro/villavallecas_total.csv')\n",
-    "villaverde = pd.read_csv('../../data_madrid_centro/villaverde_total.csv')"
+    "corredorhenares_0_240k = pd.read_csv('../../data_madrid_ext/corredorhenares_0_240k.csv')\n",
+    "corredorhenares_240k_max = pd.read_csv('../../data_madrid_ext/corredorhenares_240k_max.csv')\n",
+    "noroeste_400k_800k = pd.read_csv('../../data_madrid_ext/noroeste_400k_800k.csv')\n",
+    "noroeste_800k_max = pd.read_csv('../../data_madrid_ext/noroeste_800k_max.csv')\n",
+    "noroeste_min_400k = pd.read_csv('../../data_madrid_ext/noroeste_min_400k.csv')\n",
+    "norte_397k_max = pd.read_csv('../../data_madrid_ext/norte_397k_max.csv')\n",
+    "suroeste_total = pd.read_csv('../../data_madrid_ext/suroeste_total.csv')\n",
+    "norte_min_397k = pd.read_csv('../../data_madrid_ext/norte_min_397k.csv')\n",
+    "sur_0_220k = pd.read_csv('../../data_madrid_ext/sur_0_220k.csv')\n",
+    "sur_220k_max = pd.read_csv('../../data_madrid_ext/sur_220k_max.csv')\n",
+    "sureste_total = pd.read_csv('../../data_madrid_ext/sureste_total.csv')"
    ]
   },
   {
@@ -56,33 +44,29 @@
       "text/plain": [
        "(Index(['item-multimedia-pictures', 'item-multimedia-pictures 2', 'item-link',\n",
        "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
-       "        'item-detail 3', 'ellipsis', 'hidden-contact-phones_text',\n",
+       "        'ellipsis', 'hidden-contact-phones_text',\n",
        "        'hidden-contact-phones_text 2', 'icon-chat', 'gallery-fallback src',\n",
-       "        'logo-branding href', 'logo-branding src'],\n",
+       "        'item-detail 3'],\n",
        "       dtype='object'),\n",
        " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2',\n",
        "        'logo-branding href', 'logo-branding src', 'item-link',\n",
-       "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
-       "        'item-detail 3', 'ellipsis', 'hidden-contact-phones_text',\n",
-       "        'hidden-contact-phones_text 2', 'icon-chat', 'gallery-fallback src'],\n",
+       "        'item-link href', 'item-price', 'item-parking', 'item-detail',\n",
+       "        'item-detail 2', 'item-detail 3', 'ellipsis',\n",
+       "        'hidden-contact-phones_text', 'hidden-contact-phones_text 2',\n",
+       "        'icon-chat', 'gallery-fallback src', 'item-ribbon'],\n",
        "       dtype='object'),\n",
        " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2', 'item-link',\n",
-       "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
-       "        'ellipsis', 'hidden-contact-phones_text',\n",
-       "        'hidden-contact-phones_text 2', 'icon-chat', 'item-detail 3',\n",
-       "        'logo-branding href', 'logo-branding src', 'gallery-fallback src'],\n",
-       "       dtype='object'),\n",
-       " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2',\n",
-       "        'logo-branding href', 'logo-branding src', 'item-link',\n",
-       "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
-       "        'item-detail 3', 'ellipsis', 'hidden-contact-phones_text',\n",
-       "        'hidden-contact-phones_text 2', 'icon-chat', 'gallery-fallback src'],\n",
+       "        'item-link href', 'item-price', 'item-parking', 'item-detail',\n",
+       "        'item-detail 2', 'item-detail 3', 'ellipsis',\n",
+       "        'hidden-contact-phones_text', 'hidden-contact-phones_text 2',\n",
+       "        'icon-chat', 'item-ribbon', 'gallery-fallback src'],\n",
        "       dtype='object'),\n",
        " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2', 'item-link',\n",
-       "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
-       "        'ellipsis', 'hidden-contact-phones_text',\n",
+       "        'item-link href', 'item-price', 'item-parking', 'item-detail',\n",
+       "        'item-detail 2', 'ellipsis', 'hidden-contact-phones_text',\n",
        "        'hidden-contact-phones_text 2', 'icon-chat', 'item-detail 3',\n",
-       "        'gallery-fallback src', 'logo-branding href', 'logo-branding src'],\n",
+       "        'pricedown_price', 'pricedown_icon', 'gallery-fallback src',\n",
+       "        'listing-tags', 'logo-branding href', 'logo-branding src'],\n",
        "       dtype='object'))"
       ]
      },
@@ -92,7 +76,7 @@
     }
    ],
    "source": [
-    "carabanchel.columns, bsalamanca_900k_max.columns, bsalamanca_min_900k.columns, barajas.columns, arganzuela.columns"
+    "corredorhenares_0_240k.columns, corredorhenares_240k_max.columns, noroeste_400k_800k.columns, noroeste_800k_max.columns"
    ]
   },
   {
@@ -107,39 +91,27 @@
        "(Index(['item-multimedia-pictures', 'item-multimedia-pictures 2', 'item-link',\n",
        "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
        "        'item-detail 3', 'ellipsis', 'hidden-contact-phones_text',\n",
-       "        'hidden-contact-phones_text 2', 'icon-chat', 'logo-branding href',\n",
-       "        'logo-branding src', 'pricedown_price', 'pricedown_icon',\n",
-       "        'gallery-fallback src'],\n",
-       "       dtype='object'),\n",
-       " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2',\n",
-       "        'logo-branding href', 'logo-branding src', 'item-link',\n",
-       "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
-       "        'item-detail 3', 'ellipsis', 'hidden-contact-phones_text',\n",
-       "        'hidden-contact-phones_text 2', 'icon-chat', 'gallery-fallback src'],\n",
-       "       dtype='object'),\n",
-       " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2', 'item-link',\n",
-       "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
-       "        'item-detail 3', 'ellipsis', 'hidden-contact-phones_text',\n",
-       "        'hidden-contact-phones_text 2', 'icon-chat', 'logo-branding href',\n",
-       "        'logo-branding src', 'gallery-fallback src'],\n",
-       "       dtype='object'),\n",
-       " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2', 'item-link',\n",
-       "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
-       "        'item-detail 3', 'ellipsis', 'hidden-contact-phones_text',\n",
-       "        'hidden-contact-phones_text 2', 'icon-chat', 'logo-branding href',\n",
-       "        'logo-branding src', 'gallery-fallback src', 'listing-tags'],\n",
-       "       dtype='object'),\n",
-       " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2',\n",
-       "        'logo-branding href', 'logo-branding src', 'item-link',\n",
-       "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
-       "        'item-detail 3', 'ellipsis', 'hidden-contact-phones_text',\n",
-       "        'hidden-contact-phones_text 2', 'icon-chat', 'gallery-fallback src'],\n",
-       "       dtype='object'),\n",
-       " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2', 'item-link',\n",
-       "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
-       "        'item-detail 3', 'ellipsis', 'hidden-contact-phones_text',\n",
        "        'hidden-contact-phones_text 2', 'icon-chat', 'gallery-fallback src',\n",
        "        'logo-branding href', 'logo-branding src'],\n",
+       "       dtype='object'),\n",
+       " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2',\n",
+       "        'logo-branding href', 'logo-branding src', 'item-link',\n",
+       "        'item-link href', 'item-price', 'item-parking', 'item-detail',\n",
+       "        'item-detail 2', 'ellipsis', 'hidden-contact-phones_text',\n",
+       "        'hidden-contact-phones_text 2', 'icon-chat', 'item-detail 3',\n",
+       "        'gallery-fallback src'],\n",
+       "       dtype='object'),\n",
+       " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2', 'item-link',\n",
+       "        'item-link href', 'item-price', 'txt-big', 'item-detail',\n",
+       "        'item-detail 2', 'item-detail 3', 'ellipsis',\n",
+       "        'hidden-contact-phones_text', 'hidden-contact-phones_text 2',\n",
+       "        'icon-chat', 'favorite-btn', 'trash-btn', 'gallery-fallback src',\n",
+       "        'logo-branding href', 'logo-branding src'],\n",
+       "       dtype='object'),\n",
+       " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2', 'item-link',\n",
+       "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
+       "        'ellipsis', 'hidden-contact-phones_text',\n",
+       "        'hidden-contact-phones_text 2', 'icon-chat', 'gallery-fallback src'],\n",
        "       dtype='object'))"
       ]
      },
@@ -149,7 +121,7 @@
     }
    ],
    "source": [
-    "centro_min_700k.columns, centro_700k_max.columns, chamartin.columns, chamberi.columns, ciudadlineal.columns, fuencarral.columns"
+    "noroeste_min_400k.columns, norte_397k_max.columns, suroeste_total.columns, norte_min_397k.columns"
    ]
   },
   {
@@ -167,36 +139,18 @@
        "        'hidden-contact-phones_text 2', 'icon-chat', 'logo-branding href',\n",
        "        'logo-branding src', 'gallery-fallback src'],\n",
        "       dtype='object'),\n",
-       " Index(['item-link', 'item-link href', 'item-price', 'item-detail',\n",
-       "        'item-detail 2', 'item-detail 3', 'ellipsis', 'icon-chat',\n",
-       "        'item-multimedia-pictures', 'item-multimedia-pictures 2',\n",
-       "        'logo-branding href', 'logo-branding src', 'hidden-contact-phones_text',\n",
-       "        'hidden-contact-phones_text 2', 'gallery-fallback src'],\n",
-       "       dtype='object'),\n",
        " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2',\n",
        "        'logo-branding href', 'logo-branding src', 'item-link',\n",
        "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
        "        'item-detail 3', 'ellipsis', 'hidden-contact-phones_text',\n",
-       "        'hidden-contact-phones_text 2', 'icon-chat', 'gallery-fallback src'],\n",
+       "        'hidden-contact-phones_text 2', 'icon-chat', 'item-parking',\n",
+       "        'gallery-fallback src'],\n",
        "       dtype='object'),\n",
        " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2', 'item-link',\n",
        "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
-       "        'item-detail 3', 'ellipsis', 'hidden-contact-phones_text',\n",
+       "        'ellipsis', 'hidden-contact-phones_text',\n",
        "        'hidden-contact-phones_text 2', 'icon-chat', 'logo-branding href',\n",
        "        'logo-branding src', 'gallery-fallback src'],\n",
-       "       dtype='object'),\n",
-       " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2', 'item-link',\n",
-       "        'item-link href', 'item-price', 'item-detail', 'item-detail 2',\n",
-       "        'item-detail 3', 'ellipsis', 'hidden-contact-phones_text',\n",
-       "        'hidden-contact-phones_text 2', 'icon-chat', 'logo-branding href',\n",
-       "        'logo-branding src', 'gallery-fallback src'],\n",
-       "       dtype='object'),\n",
-       " Index(['item-multimedia-pictures', 'item-multimedia-pictures 2',\n",
-       "        'logo-branding href', 'logo-branding src', 'item-link',\n",
-       "        'item-link href', 'item-price', 'txt-big', 'item-detail',\n",
-       "        'item-detail 2', 'item-detail 3', 'ellipsis',\n",
-       "        'hidden-contact-phones_text', 'hidden-contact-phones_text 2',\n",
-       "        'icon-chat', 'favorite-btn', 'trash-btn', 'gallery-fallback src'],\n",
        "       dtype='object'))"
       ]
      },
@@ -206,7 +160,7 @@
     }
    ],
    "source": [
-    "hortaleza.columns, latina.columns, moncloa.columns, moratalaz.columns, puentevallecas.columns, retiro.columns"
+    "sur_0_220k.columns, sur_220k_max.columns, sureste_total.columns"
    ]
   },
   {
@@ -2894,7 +2848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "id": "a83ebf53",
    "metadata": {},
    "outputs": [],
