--- a/jupyter/venta_madrid centro/limpieza_madrid_ext.ipynb
+++ b/jupyter/venta_madrid centro/limpieza_madrid_ext.ipynb
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4dcfa10d",
+   "id": "9c07f182",
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "9f8b9a5d",
+   "id": "2d353c01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1247,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "29c7d02b",
+   "id": "a33a9fc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1019a1c6",
+   "id": "8673f7cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "dfa1e429",
+   "id": "19dcf49b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "cf2c1872",
+   "id": "a4f696ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1308,7 +1308,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0a3d5256",
+   "id": "92c7a656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "3fde86e5",
+   "id": "614a96ab",
    "metadata": {
     "scrolled": true
    },
@@ -1433,7 +1433,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "db4e0f55",
+   "id": "c181794e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1455,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "33e6d822",
+   "id": "37c40a44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,9 +1469,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "aa849d14",
+   "id": "8a271fdc",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1496,8 +1496,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "94c2aee4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_filt = alquiler['']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 51,
-   "id": "2b4955c6",
+   "id": "1ec06148",
    "metadata": {},
    "outputs": [
     {
@@ -4680,7 +4690,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "5a7bb3ad",
+   "id": "f4edb5f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4690,7 +4700,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "16d493cc",
+   "id": "f6ff85e1",
    "metadata": {
     "scrolled": true
    },
@@ -4722,7 +4732,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e2d4b8ad",
+   "id": "b0305486",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4736,7 +4746,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "8d19cec3",
+   "id": "03d73273",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4759,7 +4769,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "4cda6e43",
+   "id": "c8498f07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4775,7 +4785,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "79570145",
+   "id": "27f812c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4795,7 +4805,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "2b8995ad",
+   "id": "60792d88",
    "metadata": {},
    "outputs": [
     {
@@ -4827,7 +4837,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "8414c510",
+   "id": "a5674fa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4839,7 +4849,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "e43017b8",
+   "id": "c1d26eba",
    "metadata": {},
    "outputs": [
     {
@@ -5093,7 +5103,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "e7a90b8f",
+   "id": "79ef64f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5103,7 +5113,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "1ceb165e",
+   "id": "4bfcb904",
    "metadata": {},
    "outputs": [
     {
@@ -5144,7 +5154,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "b13d90f2",
+   "id": "b9be9520",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5154,7 +5164,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "578d2bba",
+   "id": "a790eb80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5164,7 +5174,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "7e1e79bf",
+   "id": "b0f554ce",
    "metadata": {
     "scrolled": true
    },
@@ -5288,7 +5298,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "c0bcd982",
+   "id": "f19deedb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5301,7 +5311,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "ebe41d71",
+   "id": "6c5c25ce",
    "metadata": {},
    "outputs": [
     {
@@ -5516,7 +5526,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "f7953d73",
+   "id": "b730341d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5526,7 +5536,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "b191b30b",
+   "id": "9fc3b673",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5536,7 +5546,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "85d354ff",
+   "id": "d0358869",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5546,7 +5556,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "69350dc8",
+   "id": "fe0d970a",
    "metadata": {
     "scrolled": true
    },
@@ -5763,7 +5773,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "15235faa",
+   "id": "257829f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5773,7 +5783,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "ef3279fc",
+   "id": "c26d4385",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5783,7 +5793,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "a595b30e",
+   "id": "1f05e1f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5793,7 +5803,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "e69e9984",
+   "id": "5cbcdb60",
    "metadata": {
     "scrolled": true
    },
@@ -7309,7 +7319,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "2a60be66",
+   "id": "5ffec56e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7319,7 +7329,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "3441a074",
+   "id": "feafef89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7329,7 +7339,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "c4b20f5e",
+   "id": "2ad83004",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7339,7 +7349,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "8fe433d4",
+   "id": "f68ae273",
    "metadata": {},
    "outputs": [
     {
@@ -7366,7 +7376,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "204cdc19",
+   "id": "be9a587b",
    "metadata": {
     "scrolled": true
    },
@@ -7409,7 +7419,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "eaa3c032",
+   "id": "dc1c464f",
    "metadata": {},
    "outputs": [
     {
@@ -7435,7 +7445,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "d51b342b",
+   "id": "5808163c",
    "metadata": {},
    "outputs": [
     {
@@ -7461,7 +7471,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "1cb4a60f",
+   "id": "0a2665f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7471,7 +7481,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "7c0375c2",
+   "id": "5ec77148",
    "metadata": {
     "scrolled": true
    },
@@ -7680,7 +7690,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "ea249ba5",
+   "id": "97ed2e41",
    "metadata": {},
    "outputs": [
     {
@@ -7883,7 +7893,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "3d45fc4a",
+   "id": "fc277a1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7893,7 +7903,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "24f2efa7",
+   "id": "ea852a13",
    "metadata": {},
    "outputs": [],
    "source": [
